<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/vault"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/vault"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/multiplication"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/subtraction"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/addition"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/vault"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/divide"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:text="@string/division"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/closeBracket" />

    <Button
        android:id="@+id/clear"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/openBracket"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:text="@string/openBracket"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintStart_toEndOf="@+id/clear" />

    <Button
        android:id="@+id/closeBracket"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:text="@string/closeBracket"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/openBracket" />

    <Button
        android:id="@+id/eight"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:barrierMargin="1dp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintStart_toEndOf="@+id/seven"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/nine"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/eight" />

    <Button
        android:id="@+id/seven"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:barrierMargin="1dp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/four"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/four"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/six"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/five" />

    <Button
        android:id="@+id/two"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@+id/one"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/one"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/three"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintStart_toEndOf="@+id/two" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/decimal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zero"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decimal" />

    <Button
        android:id="@+id/equal"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:background="@drawable/round_button"
        android:text="@string/_equalTo"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zero" />

    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="358dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toTopOf="@+id/closeBracket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <TextView
        android:id="@+id/numericalDisplay"
        android:layout_width="393dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/openBracket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

</androidx.constraintlayout.widget.ConstraintLayout>